service-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-03-20T05:51:40Z"
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetes
  namespace: default
  resourceVersion: "193"
  uid: 9544efc8-8999-48b2-8f80-5b3b92d362ba
spec:
  clusterIP: 10.100.208.1
  clusterIPs:
  - 10.100.208.1
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
